# cutelystbotan

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.obs/: workflows.yml
.reuse/: dep5
CutelystBotan/: CMakeLists.txt  CutelystQtBotan.pc.in  credentialbotan.cpp  credentialbotan.h
LICENSES/: BSD-3-Clause.txt
cmake/modules/: CutelystBotan-config.cmake.in
tests/: CMakeLists.txt  testcutelystbotan.cpp
